...
      ratio: 1,
      viewBox: '343.21 220.47 157.06 157.06',
    },
  },
  {
    id: 'costco',
    name: 'Costco',
    aliases: ['Costco membership'],
    markets: ['FR', 'US', 'GB', 'INT', 'ES'],
    popularity: 2,
    wallets: 3,
    color: '#BE0024',
    logo: {
...
      ratio: 4.22,
      viewBox: '1.43 73.69 189.66 44.96',
    },
  },
  {
    id: 'cvs',
    name: 'CVS Pharmacy',
    aliases: ['CVS', 'ExtraCare'],
    markets: ['US'],
    popularity: 1,
    wallets: 1,
    color: '#E81F3C',
    logo: {
...
      ratio: 6.71,
      viewBox: '7.4 83.72 178.47 26.58',
    },
  },
  {
    id: 'kroger',
    name: 'Kroger',
    aliases: ['Kroger Plus Card', 'Kroger Plus'],
    markets: ['US'],
    popularity: 1,
    wallets: 1,
    color: '#134B97',
    logo: {
...
      ratio: 4.97,
      viewBox: '0 0 810.14 162.98',
    },
  },
  {
    id: 'starbucks',
    name: 'Starbucks',
    aliases: ['Starbucks Rewards'],
    markets: ['INT', 'FR', 'US', 'GB', 'BE', 'LU', 'CH', 'DE', 'AT', 'IE', 'ES', 'PT'],
    popularity: 2,
    wallets: 3,
    color: '#00643C',
    logo: {
...
