const en = {
  common: {
    cancel: 'Cancel',
    close: 'Close',
    delete: 'Delete',
    done: 'Done',
    edit: 'Edit',
    save: 'Save',
    back: 'Back',
...
